fixed z-index error between header and modal

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -159,7 +159,7 @@ header {
   top: 0;
   left: 0;
   right: 0;
-  z-index: 1;
+  z-index: 100;
 }
 
 .activeSearchBar header {
